objects/Agent_Actual_Daily__c/Agent_Actual_Daily__c.object-meta.xml
<CustomObject>
    <label>Agent Actual Daily</label>
    <nameField>
        <displayFormat>AAD-{0000000000}</displayFormat>
        <label>Agent Actual Daily ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Actual Daily</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>