objects/Agent_Actual_Daily__c/fields/Agent_Actual_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Agent_Actual_Monthly__c</fullName>
    <label>Agent Actual Monthly</label>
    <referenceTo>Agent_Actual_Monthly__c</referenceTo>
    <relationshipLabel>Agent Actual Daily</relationshipLabel>
    <relationshipName>Agent_Actual_Daily</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>