objects/Agent_Actual_Daily__c/fields/Cases_Closed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Closed__c</fullName>
    <label>Cases Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>