objects/Agent_Actual_Daily__c/fields/Cases_Opened_Total__c.field-meta.xml
<CustomField>
    <fullName>Cases_Opened_Total__c</fullName>
    <label>Cases Opened Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>