objects/Agent_Actual_Daily__c/fields/Closing_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Closing_Interviews__c</fullName>
    <label>Closing Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>