objects/Agent_Actual_Daily__c/fields/No_of_New_Prospects__c.field-meta.xml
<CustomField>
    <fullName>No_of_New_Prospects__c</fullName>
    <label>No. of New Prospects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>