objects/Agent_Actual_Daily__c/fields/Production_Count__c.field-meta.xml
<CustomField>
    <fullName>Production_Count__c</fullName>
    <label>Production Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>