objects/Agent_Actual_Daily__c/fields/week__c.field-meta.xml
<CustomField>
    <fullName>week__c</fullName>
    <label>week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>