objects/Agent_Actual_Daily__c/fields/WeekYear__c.field-meta.xml
<CustomField>
    <fullName>WeekYear__c</fullName>
    <formula>IF(AND( OR(week__c==52,week__c==53),OR( (DAY(Record_Date__c)==1),(DAY(Record_Date__c)==2),(DAY(Record_Date__c)==3))),YEAR(Record_Date__c)-1,YEAR(Record_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeekYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>